objects/SaoObj900__c.object
<CustomObject>
    <description>11</description>
    <fields>
        <fullName>F2__c</fullName>
        <description>1111111111</description>
        <label>F2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f1__c</fullName>
        <description>1111</description>
        <label>f1</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>f4__c</fullName>
        <label>f4</label>
        <type>Email</type>
    </fields>
    <label>SaiObj900</label>
    <nameField>
        <label>SaiObj900 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaiObj900s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>